Save/Update files [ci skip]

--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -47,7 +47,7 @@
  DEMAND_SUPPORT_RAJPUTS:0 "軍事支援を要求"
  PROMOTE_RAJPUT_NOBILITY:0 "ラージプート貴族の昇格"
  EST_VAL_PROMOTED_RAJPUTS:0 "ラージプート貴族の登用: §Y$VAL$%§!"
- maratha_tax_burden_autonomy_tooltip:1 "§Yマラーター§!の支配下にある州はすべて、自治率が§R15%§!、州人的資源が§G25%§!増加します。"
+ maratha_tax_burden_autonomy_tooltip:1 "§Yマラーター§!の支配下にある州はすべて、自治率が§R15%§!、州の人的資源が§G25%§!増加します。"
  EST_VAL_FEUDALISM:0 "封建貴族: §Y$VAL$%§!"
  PROMOTE_MARATHA_NOBILITY:0 "マラーター貴族の昇格"
  EST_VAL_PROMOTED_MARATHAS:0 "マラーター貴族の登用: §Y$VAL$%§!"
@@ -755,7 +755,7 @@
  monsoon_events.4.a:0 "民より富だ。"
  monsoon_events.5.t:0 "梅雨"
  monsoon_events.5.d:0 "梅の花\n恵みの雨に\n鍬軽し"
- plum_rain_tooltip:0 "§Y[plum_rains_province.GetAreaName]§!地域の§Y穀物§!、§Yワイン§!、§Y茶§!、§Y香辛料§!を生産する州は、§Y5年§!間§Y「梅雨」§!を獲得し、以下の効果を得ます：\n州生産効率：§G+20.0%§!"
+ plum_rain_tooltip:0 "§Y[plum_rains_province.GetAreaName]§!地域の§Y穀物§!、§Yワイン§!、§Y茶§!、§Y香辛料§!を生産する州は、§Y5年§!間§Y「梅雨」§!を獲得し、以下の効果を得ます：\n州の生産効率：§G+20.0%§!"
  HAVE_HAD_REFORM:1 "改革$REFORM|Y$を得ました\n"
  HAVE_HAD_NOT_REFORM:1 "改革$REFORM|Y$を得ませんでした\n"
  mechanic_locked_government_type_yes:0 "政体の変更が禁止されている"
@@ -963,7 +963,7 @@
  GOVERNMENT_DESELECTED_DESC:1 "あなたの国の変化により、政府$REFORM|Y$は実行不可能になったため廃止されました。政府は$REPLACEMENT|Y$に変更されます。"
  RAJPUT_DESC:2 "§Yラージプート§!階級に特別な権限を与えることにより、我々は彼らの精鋭の戦士たちへのアクセスを取得します。ラージプートは平均的な部隊よりも士気が高く、補充が安上がりで、訓練ボーナスを長期間保持できます。"
  CHANGE_REFORM_CANT_AFFORD:0 "$COST|R$を持っていないため、政府改革を変更できません。"
- REFORM_PROGRESS_DEV:5 "§Y$LOCALAUTONOMY$%§!の平均州自治率から$POINTS|G$\nこの計算式は年間$BASE|+=0$に(12*(100+§Y$LOCALAUTONOMY$%§!))を割ったものです。\n\n"
+ REFORM_PROGRESS_DEV:5 "§Y$LOCALAUTONOMY$%§!の平均自治率から$POINTS|G$\nこの計算式は年間$BASE|+=0$に(12*(100+§Y$LOCALAUTONOMY$%§!))を割ったものです。\n\n"
  REFORM_PROGRESS_BUILDINGS:1 "\n建造物から$POINTS|G$"
  COMPANY_PRICE_CALC:0 "基本：$BASE|Y0$¤\n自国の植民範囲 §G$RANGE|0$§!¤\n$MIN|0Y$¤以下になることはありません"
  CHARTER_COMPANY_WE_AT_WAR:0 "戦争時に勅許会社を求めることはできません"
