--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -1064,7 +1064,7 @@
  emp_ita_take_the_littoral_desc:0 "イタリアはアドリア海の多くの港を支配しているが、他の多くの王国もその素晴らしい海の多くの他の港を支配している。海岸線を確保し、侵入者が我々の海域に侵入するのを防ぐことは我々にとって賢明だろう。"
  emp_ita_redeem_tirolo_title:0 "ティローロの償還"
  emp_ita_redeem_tirolo_desc:0 "チロルはドイツ人が呼ぶように、ローマを含む多くの偉大な帝国の交差点と要塞として機能してきた素晴らしいアルプスの領域である。人々の一部は、特に南部の山岳地帯にまだ暮らしている。我々がそれらの土地を確保した場合、我々はより多くのイタリア人を迎え入れ、北部に自身の素晴らしい防御線を与える。"
- emp_ita_humiliate_austria_title:0 "オーストリアを侮辱せよ"
+ emp_ita_humiliate_austria_title:0 "オーストリアに屈辱を"
  emp_ita_humiliate_austria_desc:0 "オーストリアは長い間我々の悩みの種であり、彼らが我々よりも優れていると偽り続けている。彼らは「ローマ人」の皇帝を宣言するという目標さえ持っていた！我々がいい加減に扱うべき存在ではないことを彼らに示す時だ。"
  emp_ita_a_real_roman_empire_title:0 "真のローマ帝国"
  emp_ita_a_real_roman_empire_desc:0 "我々の領土は地図全体へと広がっており、競争相手たちはずいぶんと謙虚になっている。我々がローマの偉大さの真の唯一の継承者であることを認める時が来た。"
@@ -1654,7 +1654,7 @@
  emp_boh_prem_conquest_two_desc:0 "我々の征服の成功はまだ耳の中に残っている。北へのポメレリアの土地も、ヴァーツラフ2世の支配下にあったため、我々のものにする必要がある。"
  emp_boh_bohemian_commonwealth_title:0 "ボヘミアン・コモンウェルス"
  emp_boh_bohemian_commonwealth_desc:0 "我々は、より大きな連邦を樹立するため、伝統的にボヘミアと考えられてきたもののさらに向こうに目を向ける必要がある。我々の帝国は中央ヨーロッパにまたがり、我々は世界の列強の中での自身の地位を獲得するだろう。"
- emp_boh_humiliate_austria_title:0 "オーストリアを侮辱せよ"
+ emp_boh_humiliate_austria_title:0 "オーストリアに屈辱を"
  emp_boh_humiliate_austria_desc:0 "オーストリアは帝国の皇帝位を濫用し、我が国を征服するその計画を隠そうともしない。我々はドイツの諸侯、そして世界に、オーストリアがそのように振る舞える強力な巨人ではないことを示す必要がある。"
  emp_boh_electorate_of_brandenburg_title:0 "ブランデンブルグ選帝侯"
  emp_boh_electorate_of_brandenburg_desc:0 "我々が神聖ローマ帝国の帝位を確保したいのであれば、選帝侯の支援が必要である。そして、投票を確保するため、成り上がりのブランデンブルクを我々の政治の気まぐれに服従させるより良い方法とは何だろうか？"
@@ -1847,7 +1847,7 @@
  emp_ger_hlr_burn_the_wooden_wall_title:0 "木の城壁を燃やせ"
  emp_ger_hlr_burn_the_wooden_wall_desc:0 "ブリテン諸島のロイヤル・ネイビーの存在によって、イギリス人は世界中で、そして最も重要なドイツにおいても、力を誇示できる。やつらの干渉に終止符を打ち、やつらの木の城壁を灰塵に帰し、海の底に眠らせてやれ！"
  burn_wooden_wall_tt:0 "§Y5§!隻以上の大型船を持つ§Yイギリス諸島§!に首都がある国家がない。"
- ger_rhineland_tt:0 "§Yノルトライン§!、§Y下ラインラント§!、§Yプファルツ§!地域内で工場を持つ領有州はすべて、ゲーム終了まで§Yラインラントの工業化§!を獲得し、以下の効果を得ます：\n州交易品生産補正 §G+15.0%§!"
+ ger_rhineland_tt:0 "§Yノルトライン§!、§Y下ラインラント§!、§Yプファルツ§!地域内で工場を持つ領有州はすべて、ゲーム終了まで§Yラインラントの工業化§!を獲得し、以下の効果を得ます：\n州の交易品生産補正 §G+15.0%§!"
  dominant_economy_tt:0 "他のどのヨーロッパの国家よりも毎月の収入が多い"
  germany_ned_tt:0 "§Yオランダ§!が§Y低地諸国§!地方の州を領有していない"
  ger_chancellor_tt:0 "スキル§Y3§!以上の顧問を§Y3§!人雇用する。"
