--- a/source/localisation/leviathan_l_english.yml
+++ b/source/localisation/leviathan_l_english.yml
@@ -183,7 +183,7 @@
  colonize_the_continent:0 "大陸への入植"
  ne_native_ideas:0 "北東森林部インディアンのアイデア"
  ne_native_ideas_start:0 "北東森林部インディアンの伝統"
- ne_native_ideas_bonus:0 "北東森林部インディアンの野望"
+ ne_native_ideas_bonus:0 "北東森林部インディアンの宿願"
  ne_turtle_clan:0 "亀の氏族"
  ne_turtle_clan_desc:0 "岩の如く強固な甲羅。亀は最も長寿な動物の一つで、亀から身を守る方法を学ぶことができるだろう。"
  ne_deer_clan:0 "鹿の氏族"
@@ -200,7 +200,7 @@
  ne_crane_clan_desc:0 "鶴は天性の指導者だ。鶴が教えを説く時、その大きな声は遠くからでも聞こえてきて、無視できない。"
  se_native_ideas:0 "南東森林部インディアンのアイデア"
  se_native_ideas_start:0 "南東森林部インディアンの伝統"
- se_native_ideas_bonus:0 "南東森林部インディアンの野望"
+ se_native_ideas_bonus:0 "南東森林部インディアンの宿願"
  se_mississippian_legacy:0 "ミシシッピの遺産"
  se_mississippian_legacy_desc:0 "遺産は物語によって作られる。我々が住んでいた場所、我々が使用していた物、我々が生きていた生活についての物語。宗教的で異なる部族を結び付ける交易網として、古代ミシシッピ文化は川沿いに広がっていた。"
  se_matrilineal_lineage:0 "母系血統"
@@ -217,7 +217,7 @@
  se_stomp_dancers_desc:0 "卓越したストンプダンスを披露するには、参加者はいくつかの厳格なしきたりに従う必要があり、それによって儀式が適切に執り行われる。そのしきたりには、体と心の両方を制御すること、つまり断食すること、眠らずに起きていること、そしてこの重大な役割を手助けしてくれるいくつかの薬を飲むことが含まれている。"
  sw_native_ideas:1 "アメリカ南西部インディアンのアイデア"
  sw_native_ideas_start:0 "アメリカ南西部インディアンの伝統"
- sw_native_ideas_bonus:0 "アメリカ南西部インディアンの野望"
+ sw_native_ideas_bonus:0 "アメリカ南西部インディアンの宿願"
  sw_the_old_tales:0 "昔話"
  sw_the_old_tales_desc:0 "過去の話や物語を聞くことで、自国の未来を知ることができる。彼らの教えを無視しないようにする必要がある。"
  sw_four_clans:0 "四氏族"
@@ -379,7 +379,7 @@
  TIW_one_people_desc:0 "自国の言葉で「ティウィ」は「人間」を意味する。我々は一つの言語、一つの宗教、そして一つの民族を持つ。ティウィだけがあり、我々の偉大な国の一部を形成する誰もがティウィの生活様式、ティウィの独自性、その他付随する全てを採用していることだろう。"
  generic_aboriginal_ideas:0 "アボリジニのアイデア"
  generic_aboriginal_ideas_start:0 "アボリジニの伝統"
- generic_aboriginal_ideas_bonus:0 "アボリジニの野望"
+ generic_aboriginal_ideas_bonus:0 "アボリジニの宿願"
  aborig_art:0 "アボリジニの芸術"
  aborig_art_desc:0 "他が話し言葉で自身を伝達するのに対して、我々は見事な視覚芸術を通じて自身の遺産と文化を保全している。自国の文化を守るには、色や形、そして精神世界の芸術的解釈の言語を習得し続ける能力にかかっている。"
  aborig_walkabout:0 "ウォークアバウト"
@@ -828,7 +828,7 @@
  tonga_craftsman:0 "古代トンガ人の技巧"
  tonga_craftsman_desc:0 "骨彫りや木彫り、籠作りの古き伝統がある。自国の習慣はあらゆる記録よりも古く、また自国の偉大な職人たちは、まさに血にあると信じることができるほど長い間、その仕事を代々伝えていった。"
  tonga_oceanic_empire:0 "大洋の帝国"
- tonga_oceanic_empire_desc:0 "トンガには170以上の島々があり、人々はみな古代の伝統と習慣で結ばれている。その上、トンガ帝国は、サモアやフィジー、そして自国の海岸の先にある多くの国家から、貢物を集めている。このように果てしない海を越えて、民族を一つにまとめる才気と創造を持ったトンガ帝国ほど、オセアニアに広がる国はな"
+ tonga_oceanic_empire_desc:0 "トンガには170以上の島々があり、人々はみな古代の伝統と習慣で結ばれている。その上、トンガ帝国は、サモアやフィジー、そして自国の海岸の先にある多くの国家から、貢物を集めている。このように果てしない海を越えて、民族を一つにまとめる才気と創造を持ったトンガ帝国ほど、オセアニアに広がる国はない。"
  samoan_ideas:0 "サモアのアイデア"
  samoan_ideas_start:0 "サモアの才気"
  samoan_ideas_bonus:0 "サモアの宿願"
@@ -856,7 +856,7 @@
  estate_ratu:1 "ラトゥ"
  iroquoian_federation_ideas:0 "イロコイ連邦のアイデア"
  iroquoian_federation_ideas_start:0 "イロコイ連邦の伝統"
- iroquoian_federation_ideas_bonus:0 "イロコイ連邦の野望"
+ iroquoian_federation_ideas_bonus:0 "イロコイ連邦の宿願"
  iro_great_law_of_peace:0 "大いなる平和の法"
  iro_tree_of_peace:0 "平和の木"
  iro_great_white_roots:0 "大いなる白い根"
@@ -866,7 +866,7 @@
  iro_the_grand_council:0 "大評議会"
  siouan_federation_ideas:0 "スー連邦のアイデア"
  siouan_federation_ideas_start:0 "スー連邦の伝統"
- siouan_federation_ideas_bonus:0 "スー連邦の野望"
+ siouan_federation_ideas_bonus:0 "スー連邦の宿願"
  sio_great_spirit:0 "大いなる精霊"
  sio_tioshpayes:0 "ティオシュパイエス"
  sio_between_the_rivers:0 "河川の間"
@@ -881,7 +881,7 @@
  sio_across_the_land_desc:0 "夏は西へ、冬は東へ。太陽が最も高い時はバッファローを狩猟し、寒さを避けるために森林地帯に戻る。"
  eastern_algonquian_federation_ideas:0 "東アルゴンキンのアイデア"
  eastern_algonquian_federation_ideas_start:0 "東アルゴンキンの伝統"
- eastern_algonquian_federation_ideas_bonus:0 "東アルゴンキンの野望"
+ eastern_algonquian_federation_ideas_bonus:0 "東アルゴンキンの宿願"
  ealg_corn_beans_and_squash:0 "とうもろこし、豆、カボチャ"
  ealg_corn_beans_and_squash_desc:0 "トウモロコシ、豆、カボチャ。これらは私たちの毎日の食生活の三大主成分だ。これらの栽培そのものが、自国にとって聖なる恵みである。"
  ealg_seasonal_economy:0 "季節ごとの経済"
@@ -898,7 +898,7 @@
  ealg_back_before_spring_desc:0 "春には草原の開花に合わせて海岸へと向かう。スメルト、チョウザメ、サケを捕まえる。夏には暖かい日差しの下でベリーを集める。秋には狩りをする。そして冬には、最初の降雪時に温かい火がある避難場所を探す。"
  central_algonquian_federation_ideas:0 "中央アルゴンキンのアイデア"
  central_algonquian_federation_ideas_start:0 "中央アルゴンキンの野望"
- central_algonquian_federation_ideas_bonus:0 "中央アルゴンキンの野望"
+ central_algonquian_federation_ideas_bonus:0 "中央アルゴンキンの宿願"
  calg_fur_trade:0 "毛皮交易"
  calg_fur_trade_desc:0 "他部族や外国人との毛皮交易は、自国の経済に欠かせない。狩猟の腕前に大きな誇りを持っているので、最高品質の動物の毛皮の提供ができる。"
  calg_midewiwin:0 "ミデウィウィン"
@@ -915,7 +915,7 @@
  calg_land_of_the_dawn_desc:0 "我が民族は、何千年もの間、大陸を横断して交易を行い、移住し、旅をし、家を見つけ、家を離れ、真の家を見つけてきた。カヌーの経路を使って、東西南北に移動してきた。そして、これからもそうしていくだろう。"
  muskogean_federation_ideas:0 "マスコギー連邦のアイデア"
  muskogean_federation_ideas_start:0 "マスコギーの野望"
- muskogean_federation_ideas_bonus:0 "マスコギー連邦の野望"
+ muskogean_federation_ideas_bonus:0 "マスコギー連邦の宿願"
  mus_totem_animals:0 "トーテム動物"
  mus_totem_animals_desc:0 "我が部族の伝統的な組織は、それぞれのトーテム動物の名を冠した氏族によって成り立っている。彼らは案内役であり、庇護者であり、自国に知恵を与えてくれる。"
  mus_embroidered_skin:0 "刺繍された皮膚"
@@ -932,7 +932,7 @@
  mus_meritocratic_leadership_desc:0 "目標達成は、単に与えられるよりも満足のいく報いを与える。自国の部族は、真の努力に対し、より大きな責任と権限で報いることができると信じている。"
  generic_federation_ideas:0 "連邦のアイデア"
  generic_federation_ideas_start:0 "連邦の伝統"
- generic_federation_ideas_bonus:0 "連邦の野望"
+ generic_federation_ideas_bonus:0 "連邦の宿願"
  fed_council_of_elders:0 "長老会議"
  fed_council_of_elders_desc:0 "自国の連邦政府は、連邦を構成する国全てが、全ての決定に対して声と発言権を持つことを保証するために存在している。自領の統治に協力することで、新見解検討の一助となるだろう。"
  fed_great_chief:0 "大首長"
