--- a/source/localisation/loadingtips_l_english.yml
+++ b/source/localisation/loadingtips_l_english.yml
@@ -83,7 +83,7 @@
  LOADING_TIP_81:0 "熟練した顧問はそうでない顧問より多くの費用がかかります。\n雇う前に、余裕があるか確認しましょう。"
  LOADING_TIP_82:0 "軍事ユニットを比較する時、射撃や白兵の点数だけを見てはいけません。射撃や白兵への補正も気にしてください。"
  LOADING_TIP_83:0 "大砲なくして高レベルの要塞を攻囲することはできません。\n十分な砲火力があることを確認してください。"
- LOADING_TIP_84:0 "反乱の気運がある州に軍を動かせば、\n不穏度を減らすことができます。"
+ LOADING_TIP_84:0 "反乱の気運がある州に軍を動かせば、\n州の不穏度を減らすことができます。"
  LOADING_TIP_85:0 "艦隊を使って敵の海峡横断を阻止することができます。"
  LOADING_TIP_86:0 "ゲームのスクリーンショット保存場所：\n../Documents/Paradox Interactive/Europa Universalis IV/Screenshots"
  LOADING_TIP_87:0 "F11キーを押すと、ゲームのスクリーンショットを保存します。"
