--- a/source/localisation/religion_l_english.yml
+++ b/source/localisation/religion_l_english.yml
@@ -122,10 +122,10 @@
  desc_shalosh_regalim_modifier:0 "三大巡礼祭は私たちの最も神聖なお祝いの一部であり、私たちはそれを執り行うために必要なすべてを慎重に準備する必要がある。"
  passover_modifier:0 "過越（ペサハ）"
  desc_passover_modifier:0 "ペサハを成功させた後は、主がわれらを守ってくれるということで、仲間は安心していられる。"
- passover_tooltip:0 "§Y家畜§!を生産する州はすべて、補正§Y三大巡礼祭§!を§Y1年§!間獲得し、以下の効果を得ます。\n州生産補正：§G+10%§!"
+ passover_tooltip:0 "§Y家畜§!を生産する州はすべて、補正§Y三大巡礼祭§!を§Y1年§!間獲得し、以下の効果を得ます。\n州の生産効率：§G+10%§!"
  shavuot_modifier:0 "七週の祭り（シャブオット）"
  desc_shavuot_modifier:0 "穀物に恵まれていない我が国ですが、近隣諸国との外交関係がうまくいっているため、問題なくシャブオットを迎えることができた。"
- shavuot_tooltip:0 "§Y穀物§!を生産する州はすべて、補正§Y三大巡礼祭§!を§Y1年§!間獲得し、以下の効果を得ます。\n州生産補正：§G+10%§!"
+ shavuot_tooltip:0 "§Y穀物§!を生産する州はすべて、補正§Y三大巡礼祭§!を§Y1年§!間獲得し、以下の効果を得ます。\n州の生産効率：§G+10%§!"
  sukkot_modifier:0 "仮庵の祭り（スコット）"
  desc_sukkot_modifier:0 "スッコトで苦難を分かち合うことで、私たちは共通の民族意識を得るようになる。"
  jewish_flavor.5.t:0 "第三神殿"
