--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -1262,8 +1262,8 @@
  BUILD_GREAT_PROJECT_EFFECT:0 "大事業$NAME|Y$を建造する"
  DESTROY_GREAT_PROJECT:0 "大事業$NAME|Y$を破壊する"
  MOVE_GREAT_PROJECT_INSTANTLY:0 "$TYPE$$NAME|Y$は$PROVINCE|Y$州に移動します。"
- MODIFIER_GLOBAL_MONTHLY_DEVASTATION:0 "月間荒廃度"
- MODIFIER_GLOBAL_PROPSPERITY_GROWTH:0 "繁栄増加"
+ MODIFIER_GLOBAL_MONTHLY_DEVASTATION:0 "国家の月間荒廃度"
+ MODIFIER_GLOBAL_PROPSPERITY_GROWTH:0 "国家の繁栄増加"
  MODIFIER_LOCAL_PROPSPERITY_GROWTH:0 "州の繁栄増加"
  MODIFIER_MONTHLY_FAVOR_MODIFIER:0 "月間好感度増加補正"
  ADD_FAVORS_EFFECT:0 "$WHOWITH|Y$は、$WHOFOR|Y$に$AMOUNT|Y$以上の好感度があります。"
@@ -1537,7 +1537,7 @@
  CANNOT_PERFORM_ACTION_NOT_YOUR_UNIT:0 "このユニットは操作できません。"
  UNIT_LOADED_ON_A_SHIP:0 "ユニットは乗船しています。"
  HAS_FOREIGN_UNITS_ABOARD:0 "艦船に外国の部隊が乗船しています。"
- IN_ENEMY_TERRITORY:0 "ユニットが敵テリトリーにいます。"
+ IN_ENEMY_TERRITORY:0 "ユニットが敵領土にいます。"
  CONDOTTIERI_ALREADY_HAS_LEADER:0 "コンドッティエーリのユニットは指揮官がいます。"
  NO_TARGETS_TO_ATTACH_TO:0 "追随させられるユニットがいません。"
  UPGRADE_SHIPS_DESC:0 "艦船を最新の設計にアップグレードします。\nアップグレードされた艦船は戦力が1%まで減少し、水兵はプールへ戻ります。 "
