--- a/source/localisation/emperor_revolutions_l_english.yml
+++ b/source/localisation/emperor_revolutions_l_english.yml
@@ -144,7 +144,7 @@
  laissez_faire_grain_trade:0 "レッセフェール穀物交易"
  desc_laissez_faire_grain_trade:0 "我々は穀物商人が小麦粉の販売からできるだけ多くの利益を引き出すことを自由に行えるようにした。"
  revolutionary_sentiment_warning:0 "§Rこのオプションを選択することで[Root.GetName]に革命の中心地が出現する可能性が高まります。§!\n"
- laissez_faire_grain_trade_tooltip:0 "領有する§Y[Root.Culture.GetGroupName]§!文化で§Y穀物§!を生産する全ての州は、以後5年間、州生産効率§G+50%§!を獲得します。"
+ laissez_faire_grain_trade_tooltip:0 "領有する§Y[Root.Culture.GetGroupName]§!文化で§Y穀物§!を生産する全ての州は、以後5年間、州の生産効率§G+50%§!を獲得します。"
  laissez_faire_grain_trade_removed_tooltip:0 "補正§Y「レッセフェール穀物交易」§!が、§Y穀物§!を生産するすべての§Y[Root.Culture.GetGroupName]§!の州から取り除かれます。"
  center_of_revolution.2002.name:0 "[Root.GetUsableNameCap]の国家債務"
  center_of_revolution.2002.desc:0 "絶え間ない紛争と経済的不況が組み合わさって、[Root.Monarch.GetTitle]には多くが二度と返済されないのではと恐れるほどの高いレベルの債務が残された。これらの債務の返済の国家予算に占める割合が増え続けていることで、解決策を模索するため閣僚評議会が召集された。すべてが債務不履行を望ましい選択肢から除外する中で、一部の閣僚は増税を支持しているが、他の閣僚はこれが庶民には不人気であると指摘し、代わりに[Root.GetUsableName]の予算プロセスを改善するためのより広範な改革を支持している。"
