Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -718,7 +718,7 @@
  STOP_BACK_CURR_ISSUE_EFFECT:0 "$NAME|Y$は現在$ISSUE|Y$に反対しています。\n"
  BACK_CURR_ISSUE_EFFECT:0 "$NAME|Y$は現在$ISSUE|Y$を支持しています。\n"
  CONFIRADDSEATINPARLIAMENTITLE:0 "$NAME$の議席を与えます"
- CONFIRMADDSEATINPARLIAMENTTEXT:0 "$PROV|Y$に議席を与えれば、$NAME$の問題に投票することができ、その州には以下の効果があります：\n$EFF$"
+ CONFIRMADDSEATINPARLIAMENTTEXT:0 "$PROV|Y$に議席を与えれば、$NAME$の問題に投票することができ、その州に以下の影響を及ぼします：\n$EFF$"
  SEAT_IN_PARLIAMENT:0 "$NAME|Y$は$PARL$に議席を持っています。"
  CASIP_NOCORE:0 "$NAME|Y$が$PARL$に議席を与えるには中核州でなければなりません。"
  CASIP_ALREADYSEAT:0 "$NAME|Y$は、すでに$PARL$に議席を持っています。"
@@ -1342,7 +1342,7 @@
  YOU_YEARLY_HORDE_UNITY:0 "§Y遊牧民の結束§!\nあなたの遊牧民の結束は以下の理由により毎年§Y$VALUE$§!変化します：\n"
  THEY_YEARLY_HORDE_UNITY:0 "§Y遊牧民の結束§!\n彼らの遊牧民の結束は以下の理由により毎年§Y$VALUE$§!変化します：\n"
  CVIEW_HORDE_UNITY_DESC:1 "遊牧民の結束は、ハーンが部族からどのくらいの支持を得ているかの尺度です。それは時間が経つにつれて減少し、§Y略奪し破壊された州§!で増加します。低い結束を持つ集団は内紛に屈する可能性が高くなります。"
- YOU_HORDE_UNITY_EFFECTS:0 "§Yあなたの現在の遊牧民の結束からの影響：§!"
+ YOU_HORDE_UNITY_EFFECTS:0 "§Y現在の遊牧民の結束からの影響：§!"
  THEY_HORDE_UNITY_EFFECTS:0 "§Y彼らの現在の遊牧民の結束からの影響：§!"
  NO_MIL_COST_MAINT:1 "この指揮官は維持費として§G0§!£mil£のコストがかかります。\n"
  MIL_COST_MAINT:1 "この指揮官は、維持費として毎月$COST|Y$£mil£のコストがかかるでしょう。我が国には指揮官が$CURR|Y$人おり、維持費なしで$ALLOW|Y$人持つことができます。\n"
@@ -2077,11 +2077,11 @@
  CV_PROMOTE_MERCANTILISM_DESC:0 "§Y$POWER_COST$§!£dip£を消費して重商主義を$VAL$推進します。"
  CV_RAISE_WARTAX_DIALOG_TITLE:0 "戦争税の徴収"
  CV_RAISE_WARTAX_NOPOWER:0 "戦争税を徴収するのに十分な£mil£を持っていません。§Y$POWER_COST$§W£mil£が必要ですが、利用可能なのは§Y$POWER_AVAILABLE$§W£mil£です。"
- CV_RAISE_WARTAX_DIALOG_DESC:0 "§Y$COST$§!の£mil£を使って§Y$DURATION$§!年間、戦争税を徴収します。\n\nこれには以下の効果があります："
+ CV_RAISE_WARTAX_DIALOG_DESC:0 "§Y$COST$§!の£mil£を使って§Y$DURATION$§!年間、戦争税を徴収します。\n\n以下の影響を及ぼします："
  CV_STOP_WARTAX_DIALOG_TITLE:0 "戦争税の停止"
  CV_STOP_WARTAX_DIALOG_DESC:0 "本当に戦争税の課税を停止しますか？"
  NO_INFLATION_ATM:0 "インフレはありません。"
- NO_INFLATION:0 "あなたの現在のインフレは十分に高くありません。$VAL$より高い場合にのみそれを減少させることができます。"
+ NO_INFLATION:0 "現在インフレはそれほど高くありません。$VAL$より高い場合にのみ減少させることができます。"
  native_ruthless_tt:0 "このオプションを選択すると、今後、原住民を§Y情け容赦なく§!扱うことになります。それは彼らの襲撃の頻度を増やしますが、我々の植民地がより速く成長することを可能にします。"
  native_peace_tt:0 "このオプションでは、原住民に対する態度として「§Y自分も生き他も生かす§!」を採用します。我々は、原住民を同化させる機会が増えるでしょう。"
  native_trader_tt:0 "このオプションを使用すると、我々は原住民と§Y交易§!を行うことで、そこから利益を得ます。"
@@ -3155,7 +3155,7 @@
  RESULT:0 "結果"
  CHANGE_GOVERNMENT_TYPE:0 "§Y政府の変更§!"
  DISCIPLINE_VALUE:0 "軍の規律値は§Y$VALUE|0$%§!です。"
- DISCIPLINE_VALUE_NEW:0 "$COUNTRY$軍の規律は$VALUE$です。"
+ DISCIPLINE_VALUE_NEW:0 "$COUNTRY$軍の規律は$VALUE$"
  SELECT_ADVISOR:0 "顧問を選択"
  CANCEL_COLONIST:0 "植民者を召還"
  CANCEL_COLONIST_DESC:0 "州が自領に適切に統合される前に植民者を呼び戻しても、植民地が中断されることはありませんが、原住民の蜂起を引き起こす可能性があります。"
@@ -4522,9 +4522,9 @@
  CTPOS_ALREADY:0 "我々はすでに$NAME|Y$にある$NODE|Y$に交易所を持っています。"
  CTPOS_NOT_OUR_PROVINCE:0 "交易所を作成するには、$NAME|Y$を所有し、支配する必要があります。"
  CONFIRCREATETRADEPOST:0 "交易所を作成"
- CONFIRCREATETRADEPOSTTEXT:0 "$NAME$に交易所を作成すると、以下の効果を持つようになります：\n$EFFECTS$"
+ CONFIRCREATETRADEPOSTTEXT:0 "$NAME$に交易所を作成すると、以下の影響を及ぼします：\n$EFFECTS$"
  CONFIRCREATETRADEPOSTCOST:0 "これには$COST|Y$の$TYPE$点が必要です。"
- CTPOS_DO:0 "交易所の作成は§Y$COST$§!の$TYPE$点が必要であり、そこに以下の効果をもたらします：\n$EFFECTS$"
+ CTPOS_DO:0 "交易所の作成は§Y$COST$§!の$TYPE$点が必要であり、以下の影響を及ぼします：\n$EFFECTS$"
  CTPOS_NOTMERCHREPUB:0 "商人共和国のみ、交易所を作成できます。"
  NOT_FOREIGN_HEIR:0 "後継者は外国人ではない"
  HAS_FOREIGN_HEIR:0 "後継者は外国人である"
@@ -4803,9 +4803,9 @@
  alert_age_ending_soon_instant:0 "$AGENAME|Y$があと$MONTH|Y$ヶ月で終了！"
  alert_age_ending_soon_delayed:0 "現在の時代が終了しようとしています。すべての栄光と能力がクリアされ、新たな目標のセットが利用可能になります。"
  alert_age_can_spend_splendor_instant:0 "§Y能力を獲得可能§!"
- alert_age_can_spend_splendor_delayed:0 "あなたの現在の栄光のレベルは、能力を得られるのに十分なほど高いです。"
+ alert_age_can_spend_splendor_delayed:0 "現在の栄光のレベルは高く、能力を獲得可能です。"
  alert_can_enact_decree_instant:0 "§Y勅令を制定可能！§!"
- alert_can_enact_decree_delayed:0 "あなたの現在の能力主義のレベルは、勅令を制定するのに十分高いです。"
+ alert_can_enact_decree_delayed:0 "現在の能力主義のレベルは高く、勅令を制定可能です。"
  alert_can_use_russian_ability_instant:0 "§Yロシアの能力を使用可能！§!"
  alert_can_use_russian_ability_delayed:0 "$POWERS|Y$は現在使用可能です。"
  POSSIBLE_INCIDENTS:0 "可能性のある事件"
