--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -1,11 +1,11 @@
 ﻿l_english:
  tooltip_own_cossack_province:0 "§Yコサック§!階級の保有する州があります。"
  estate_nobles:0 "貴族"
- estate_nobles_desc:0 "この階級は、あなたの国の、封土を持つ貴族の一門を表しています。彼らの特権は古い伝統によって保証されており、そのほとんどは、元来国家に対する多大な貢献により勝ち取られたものでした。彼らの伝統的な責務は、外敵から国土を守るため戦うことであり、同時に、君主を助け平和を保つことにあります。"
+ estate_nobles_desc:0 "この階級は封土を持つ貴族の一門を表しています。彼らの特権は古い伝統によって保証されており、そのほとんどは、元来国家に対する多大な貢献により勝ち取られたものでした。彼らの伝統的な責務は、外敵から国土を守るため戦うことであり、同時に、君主を助け平和を保つことにあります。"
  estate_church:0 "聖職者"
- estate_church_desc:0 "この階級は、教育を受けたあなたの国の宗教の僧侶たちを表しています。彼らは長きにわたり国の行政に従事した伝統を持っており、その伝統的な責務は、人々の精神的幸福に寄与することにあります。何世紀もの間、彼らは敬虔な信者だけでなく過去の支配者からも、土地財産や特権を獲得してきました。"
+ estate_church_desc:0 "この階級は、教育を受けた国教の聖職者たちを表しています。彼らは長きにわたり国の行政に従事した伝統を持っており、その伝統的な責務は、人々の精神的幸福に寄与することにあります。何世紀もの間、彼らは敬虔な信者だけでなく過去の支配者からも、土地財産や特権を獲得してきました。"
  estate_burghers:0 "市民"
- estate_burghers_desc:0 "この階級は、あなたの国の職人、商人といった城壁内に居住する都市住民を表しています。彼らの伝統的な責務は、経済活動の維持のために働くことであり、またさらなる経済活動の効率化のために、自身や代表する諸都市のための特権を得ることを求めました。"
+ estate_burghers_desc:0 "この階級は、職人、商人といった城壁内に居住する都市住民を表しています。彼らの伝統的な責務は、経済活動の維持のために働くことであり、またさらなる経済活動の効率化のために、自身や代表する諸都市のための特権を得ることを求めました。"
  estate_cossacks:0 "コサック"
  estate_cossacks_desc:0 "コサックはステップの自由な民です。彼らの背景はそれぞれ異なり、草原で生まれた者がいる一方で、荒野と隣接する広大な土地から逃れてきた農奴もいます。強力な侵略者であり頑健な入植者であるコサックは、貴族と同じくらい重要であると認められることと、彼らの自由を制限するいかなる者をも打ち倒すことを熱望しています。"
  estate_dhimmi:0 "ズィンミー"
@@ -135,10 +135,10 @@
  ESTATE_LOYALTY_TOOLTIP_TERRITORY:0 "彼らは領土を要求しているため、忠誠は毎月$MALUS$減少し、合計で$CHANGE$変化するでしょう。"
  ESTATE_LOYALTY_TOOLTIP_DELAYED:3 "階級の忠誠は、彼らの国全体への影響力を決定します。彼らの忠誠が$THRESHOLD|Y2&$以上あるうちは、彼らは国家にとって有益です。一方この閾値を下回ると、彼らは不忠となり国家に不利益をもたらします。この効果の大きさは彼らの影響力のレベルに応じて変わります。"
  ESTATE_INFLUENCE_TOOLTIP_DELAYED:0 "階級の影響力は、彼らが国で握っている権力です。影響力のレベルが高いと、忠実な階級によってもたらされる利益と、不忠な階級によって被るペナルティの双方が増加します。影響力が$DANGER|Y$以上に増加した階級は、国家を掌握する危険性があります。"
- PROVINCE_GRANT_ESTATE_TOOLTIP_2:0 "州に以下の効果があるでしょう："
- PROVINCE_GRANT_ESTATE_TOOLTIP_3:0 "§R彼らの忠誠は$AMT|Y$を下回っているため、州に以下の効果があるでしょう：§!"
- PROVINCE_GRANT_ESTATE_TOOLTIP_4:0 "§G彼らの忠誠は$AMT|Y$を上回っているため、州に以下の効果があるでしょう：§!"
- PROVINCE_GRANT_ESTATE_TOOLTIP_DELAYED:0 "$PROVINCE|Y$の$ESTATE|Y$は、あなたの国に以下の効果があるでしょう："
+ PROVINCE_GRANT_ESTATE_TOOLTIP_2:0 "州に以下の影響を及ぼします："
+ PROVINCE_GRANT_ESTATE_TOOLTIP_3:0 "§R彼らの忠誠は$AMT|Y$を下回っているため、州に以下の影響を及ぼします：§!"
+ PROVINCE_GRANT_ESTATE_TOOLTIP_4:0 "§G彼らの忠誠は$AMT|Y$を上回っているため、州に以下の影響を及ぼします：§!"
+ PROVINCE_GRANT_ESTATE_TOOLTIP_DELAYED:0 "$PROVINCE|Y$の$ESTATE|Y$は、国家に以下の影響を及ぼします："
  PROVINCE_CANNOT_GRANT_ESTATE_TOOLTIP:0 "$PROVINCE|Y$は以下の理由により$ESTATE|Y$に与えることはできません："
  PROVINCE_NO_ESTATE_TOOLTIP:0 "$PROVINCE|Y$は現在、階級によって支配されていません。"
  PROVINCE_NO_ESTATE_TOOLTIP_DELAYED:0 "§G階級選択メニューを開きます。§!"
