--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -8079,7 +8079,7 @@
  ATTR_HOSTILE_WATERS:0 "§R$VAL$%§! - 敵対的水域"
  M_PICK_SHORTCUT_BUTTON:0 "ショートカットキーの選択"
  MAPMODE_SUPER_REGION:0 "亜大陸"
- TARIFF_EXTRA:2 "さらに、関税の補正効果が関税率に適用されます。具体的には、以下の理由により§G$VAL$%§!増加します：\n$WHY$"
+ TARIFF_EXTRA:2 "さらに、国家の関税補正が関税率に適用されます。具体的には、以下の理由により§G$VAL$%§!増加します：\n$WHY$"
  CONVREL_STAB_NO_NEGATIVE:0 "改宗するには少なくとも§G0§!の安定度が必要です。"
  PAPAL_OPINION_OF_US:0 "教皇領の我々への評価により$VAL$の補正を受けます。"
  LOSE_CLAIMS_ON:0 "§Y$WHO$§!は§R$PROVS$§!の請求権を失うでしょう。"
@@ -8089,9 +8089,9 @@
  MESSAGE_BUTTON_SEARCH:0 "検索"
  MESSAGE_BUTTON_CLEAR:0 "クリア"
  MESSAGE_SEARCH_TOOLTIP:0 "リストをフィルタリングするため、§Yスペース§!で区切られたキーワードを入力してください。"
- TRADEPATROL_REPAIRING:0 "§Rこのユニットは現在修復中です。すぐに任務を継続するでしょう。§!"
+ TRADEPATROL_REPAIRING:0 "§Rこのユニットは現在修復中です。まもなく任務を再開するでしょう。§!"
  PEACE_VIEW_GOLD_ADD_REMOVE:0 "賠償金の請求、或いは支払いを申し出る金額は§G＋§!や§G－§!によって§G増額§!または§G減額§!¤できます。\n$GOLD|+$¤はおおよそ§Y$WS|+1$§!相当の戦勝点に相当します。"
- PEACE_VIEW_GOLD_ADD_REMOVE_KEYS:0 "§Y右クリック§!で§Gさらに§!追加または削除します。\n§YShift+左クリック§!で§G最大§!まで追加または削除します。"
+ PEACE_VIEW_GOLD_ADD_REMOVE_KEYS:0 "§Y右クリック§!で§Gさらに§!追加・削除します。\n§YShift+左クリック§!で§G最大§!まで追加・削除します。"
  PEACE_VIEW_GOLD_ADD_KEYS:1 "§Y右クリック§!でさらに追加します。\n§YShift+左クリック§!で彼らが受け入れる限りまで追加します。\n§YShift+右クリック§!で可能な最大量を追加します。"
  PEACE_VIEW_GOLD_REMOVE_KEYS:1 "§Y右クリック§!でさらに削除します。\n§YShift+左クリック§!で彼らが受け入れる値に設定します。\n§YShift+右クリック§!で0に設定します。"
  SIEGE_ARTILLERY_EXPLANATION:0 "砲兵は包囲ロールにボーナスを与えます。このボーナスは要塞レベルと比較して大砲の量に依存します。"
