Save/Update files [ci skip]

--- a/source/localisation/areas_regions_l_english.yml
+++ b/source/localisation/areas_regions_l_english.yml
@@ -818,9 +818,9 @@
  somaliland_area:0 "ソマリランド"
  somaliland_area_name:0 "ソマリランド"
  somaliland_area_adj:0 "ソマリ"
- southern_ethiopia_area:0 "カファ"
- southern_ethiopia_area_name:0 "カファ"
- southern_ethiopia_area_adj:0 "カファ"
+ southern_ethiopia_area:0 "カッファ"
+ southern_ethiopia_area_name:0 "カッファ"
+ southern_ethiopia_area_adj:0 "カッファ"
  hadiya_area:0 "ハディヤ"
  hadiya_area_name:0 "ハディヤ"
  hadiya_area_adj:0 "ハディヤ"
