--- a/source/localisation/cradle_of_civilization_l_english.yml
+++ b/source/localisation/cradle_of_civilization_l_english.yml
@@ -673,7 +673,7 @@
  CONFIRMADDPASHA_TEXT:1 "$STATE|Y$にパシャを割り当てると、以下の効果が得られます：\n$EFFECT$"
  CONFIRMREMOVEPASHA:0 "パシャを解任"
  CONFIRMREMOVEPASHA_TEXT:1 "$STATE|Y$でパシャを解任すると、以下の影響が得られます：\n$EFFECT$"
- pasha_removed_modifier:0 "パシャは解任された"
+ pasha_removed_modifier:0 "パシャの解任"
  PASHA_MODIFIER:0 "ステートのパシャ"
  CONFORM_TO_TEMPLATE:1 "§Yテンプレートに従う§!"
  CONFORM_TO_TEMPLATE_ARMY_DESC:0 "この陸軍をテンプレートに適合させるために陸軍のテンプレートを選択します。\nテンプレートと一致しない連隊は新しい陸軍として切り離され、不足している連隊が構築され、この陸軍に移動して統合されます。"
@@ -795,14 +795,14 @@
  STATE_JANISSARIES_BATTLE_OR_SIEGE:0 "戦闘あるいは包囲が進行中の州でイェニチェリを徴集することはできません。"
  ALREADY_BULDING_TO_UNIT:0 "§Rユニットはすでにこのユニットと結合するため構築されています。§!\n"
  CONFORM_TO_TEMPLATE_BUILD_DESC_ARMY:0 "$PROVS|Y$州が構築に利用されます：\n$INF$£infantry_icon_small£/$CAV$£cavalry_icon_small£/$ART$£artillery_icon_small£"
- CONFORM_TO_TEMPLATE_BUILD_DESC_NAVY:0 "$PROVS|Y$州が構築に利用されます：\n$HEAVY$£big_ship_icon_small£ / $LIGHT$£light_ship_icon_small£ / $GALLEY$£galley_icon_small£ / $TRANSPORT$£transport_icon_small£"
+ CONFORM_TO_TEMPLATE_BUILD_DESC_NAVY:0 "$PROVS|Y$州を建艦に利用します：\n$HEAVY$£big_ship_icon_small£ / $LIGHT$£light_ship_icon_small£ / $GALLEY$£galley_icon_small£ / $TRANSPORT$£transport_icon_small£"
  CONFORM_TO_TEMPLATE_MANPOWER_COST:0 "人的資源コスト：$VAL|Y$£icon_manpower_in_text£\n"
  CONFORM_TO_TEMPLATE_SAILOR_COST:0 "必要な水兵：$VAL|Y$£icon_sailors\n"
  CONFORM_TO_TEMPLATE_REMOVED_ARMY:0 "$NUM|Y$の連隊はテンプレートと一致しておらず、切り離されます。"
  CONFORM_TO_TEMPLATE_REMOVED_NAVY:0 "$NUM|Y$の船はテンプレートと一致しておらず、切り離されます。"
  ENVIRONMENT:0 "周囲の状況"
- OUTLINER_ARMY_QUEUE:0 "この陸軍を構築します：\n$INF$£infantry_icon_small£ / $CAV$£cavalry_icon_small£ / $ART$£artillery_icon_small£\n"
- OUTLINER_NAVY_QUEUE:0 "この海軍を構築します：\n$HEAVY$£big_ship_icon_small£ / $LIGHT$£light_ship_icon_small£ / $GALLEY$£galley_icon_small£ / $TRANSPORT$£transport_icon_small£\n"
+ OUTLINER_ARMY_QUEUE:0 "建設する陸軍：\n$INF$£infantry_icon_small£ / $CAV$£cavalry_icon_small£ / $ART$£artillery_icon_small£\n"
+ OUTLINER_NAVY_QUEUE:0 "建設する海軍：\n$HEAVY$£big_ship_icon_small£ / $LIGHT$£light_ship_icon_small£ / $GALLEY$£galley_icon_small£ / $TRANSPORT$£transport_icon_small£\n"
  ADVISOR_RELIGION:0 "顧問の宗教：§Y$RELIGION$§!"
  ADVISOR_CULTURE:0 "顧問の文化：§Y$CULTURE$§!"
  NO_ADVISOR_RELIGION:0 "顧問の宗教"
@@ -843,7 +843,7 @@
  STATE_JANISSARIES_NEED_MIL_POWER:0 "イェニチェリの徴集には$AMOUNT|Y$£mil£が必要です。"
  STATE_JANISSARIES_DESC:2 "§Yオスマン政府§!であることにより、異教徒の州でイェニチェリを徴兵可能。異教徒の開発度が大きいほど、より多くのイェニチェリを引き出すことができる。"
  RELIGIOUS_SCHOOL_MAP_ICON_TOOLTIP:0 "$COUNTRY$$FLAG$は$SCHOOL|Y$に従っています。"
- DISBAND_UNIT_RETURN_MANPOWER_CAPPED:0 "最大人的資源$MAX|Y$を超えることはできないため、兵士の内$NUMBER|Y$人だけ、人的資源に戻ります。傭兵は戻りません。"
+ DISBAND_UNIT_RETURN_MANPOWER_CAPPED:0 "最大人的資源$MAX|Y$を超えることはできないため、兵士の内、$NUMBER|Y$人だけ人的資源プールに戻ります。傭兵は戻りません。"
  CENTER_HAS_NO_PROVINCES_TO_CONVERT:0 "§R改宗完了！対象となるすべての州ですでに改宗が完了しています。§!\n"
  PROVINCES_LEFT_TO_CONVERT:0 "$NUM|Y$の州の改宗が可能です。\n"
  CONFIRM_HOTJOINERS:0 "HOTJOINしているプレイヤーの確認"
