--- a/source/localisation/mandate_of_heaven_l_english.yml
+++ b/source/localisation/mandate_of_heaven_l_english.yml
@@ -163,9 +163,9 @@
  tributary_events.17.d:0 "今年の朝貢団の到着に伴い、多くの宦官が我々の階級に加わった。これらの若者はその能力が証明されており、最低限の準備をした後、我らが[Root.Monarch.GetTitle]へ奉仕する生活をするために送り出された。\nある者は行政に携わり、ある者は信の置ける大臣や陸海軍の指揮官にまで上り詰めるかもしれない。"
  tributary_events.17.a:0 "そのような献身は模範的だな。"
  tributary_events.18.t:0 "海賊に苦しむ朝貢船団"
- tributary_events.18.d:0 "海外からの財宝を我々の海岸に運ぶ朝貢船団の定期的な到着は、ある意味では、すばらしい財産を望む人にとって無視するには大きすぎる誘惑である。海賊の集団が朝貢任務を目標にし始め、我々の[Root.Monarch.GetTitle]のための多くの贈り物によってかなりの利益を上げている。"
- tributary_events.18.a:0 "保護するため追加の資源を転用する。"
- tributary_events.18.b:0 "我々の海軍が彼らをさっさと片付けるだろう！"
+ tributary_events.18.d:0 "海外からの財宝を我々の海岸に運ぶ朝貢船団の定期的な到着は、一攫千金を狙う者にとっては、ある意味無視できない誘惑である。海賊の集団が朝貢使節団を狙い始め、我々の[Root.Monarch.GetTitle]への多くの贈り物によってかなりの利益を上げている。"
+ tributary_events.18.a:0 "彼らを護るために余力を割く。"
+ tributary_events.18.b:0 "我が海軍が奴らをさっさと片付けるだろう！"
  tributary_events.19.t:0 "忠誠心への報奨"
  tributary_events.19.d:0 "[tributary_loyal.GetName]は、多くの点で、朝貢国家の理想的な模範である。彼らの任務は定期的であり、臣従が問題になったことは一度もない。\n我々の朝貢制度は、我々が保護を与えるものからの贈り物や他の尊敬の象徴を我々に提供するが、それを擁護することを約束している点を除けば、他の方法で彼らを世話することが期待される。おそらく、忠誠心が報われることを示す時だろうか？"
  tributary_events.19.a:0 "我々は最高の贈り物を[tributary_loyal.Monarch.GetTitle]に送るべきだ！"
