--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -628,8 +628,8 @@
  MERCHANT_CANCEL_2:0 "$COUNTRY$出身の$NAME$"
  MERCHANT_CANCEL_3:0 "という商人が"
  MERCHANT_CANCEL_4:0 "$LOCATION$"
- MERCHANT_CANCEL_5:0 "$LOCATION$"
- MERCHANT_CANCEL_6:0 "から帰還しました。"
+ MERCHANT_CANCEL_5:0 "から帰還しました。"
+ MERCHANT_CANCEL_6:0 "$NAME$は$COUNTRY$に仕えています。"
  MERCHANT_CANCEL_LOG:0 "$NAME$、$PROVINCE$を去る"
  MERCHANT_CANCEL_BTN1:0 "OK"
  MERCHANT_CANCEL_BTN2:0 "OK"
