--- a/source/localisation/rule_britannia_l_english.yml
+++ b/source/localisation/rule_britannia_l_english.yml
@@ -50,11 +50,11 @@
  industrialization_events.3.d:0 "初期の大気圧機関の設計を改善した起業家であり発明家の[Root.inventor_name.GetName]は、以前の振動を利用する機関の代わりに、個別の凝縮器と回転運動を利用する新しい種類の機械を困難の末に開発した。[Root.inventor_name.GetName]蒸気機関は、大気圧をわずかに上回る圧力で動作するため、以前の構造の二倍の生産性を実現し、あらゆる種類の工業における機械を駆動する手段として非常に有益である。"
  industrialization_events.3.d.england:0 "初期の大気圧機関の設計を改善した起業家であり発明家のジェームズ・ワットは、以前の振動を利用する機関の代わりに、個別の凝縮器と回転運動を利用する新しい種類の機械を困難の末に開発した。ワット蒸気機関は、大気圧をわずかに上回る圧力で動作するため、以前の構造の二倍の生産性を実現し、あらゆる種類の工業における機械を駆動する手段として非常に有益である。"
  industrialization_events.3.a:0 "ポッポー。"
- industrialization_events.3.a.tt:0 "州は、今よりも工業化イベントを誘発する可能性が高くなります。"
+ industrialization_events.3.a.tt:0 "所有州は、今よりも産業革命イベントを誘発する可能性が高くなります。"
  industrialization_events.4.t:0 "スイング・プラウ"
  industrialization_events.4.d:0 "[invention_province.GetName]で暮らす発明家の[Root.inventor_name.GetName]は、新しい形状と鉄で覆われた発土板を試作し、作業をより簡単に効率的にする非常に軽い犂を作成した。農業用具の分野における他の最近の発明と同様に、新しい犂は我々の国の農業生産性を大幅に向上させてくれるだろう。"
  industrialization_events.4.a:0 "とても素晴らしい。"
- industrialization_events.4.a.tt:0 "州は、今よりも工業化イベントを誘発する可能性が高くなります。"
+ industrialization_events.4.a.tt:0 "所有州は、今よりも産業革命イベントを誘発する可能性が高くなります。"
  industrialization_events.5.t:0 "飛び杼"
  industrialization_events.5.d:0 "[invention_province.GetName]で暮らす発明家の[Root.inventor_name.GetName]は、「車輪付き」杼の新しい設計について特許を取得しており、杼を通過するときに2つ目の杼で捕捉する必要性を省くことで機織りに革命を起こすだろう。生産性は依然として紡績速度によって制限されおり、すでに製織生産が大きなボトルネックになっているが、杼は、すばやく国中の製織業者に広がっている。"
  industrialization_events.5.a:0 "我々の紡績業者が追いつくことができれば…"
