--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -1235,7 +1235,7 @@
  RESCIND_UPGRADE_SUBJECT_TYPE_EFFECT:0 "現在、関係が取り消されました：\n$SUBJECTTYPEUPGRADE$"
  RESCIND_UPGRADE_SUBJECT_TYPE_NAME:0 "$SUBJECTTYPEUPGRADE$を取り消す"
  GALLEY_BONUS_NOT_INLAND_SEA_NO_MALUS_DESC:0 "ここは内海・沿岸ではないので、ガレー船はここでダメージボーナスを得ることはできません。"
- CONCENTRATE_DEVELOPMENT_TAKE:0 "開発度$DEV$は、$STATE|Y$から取得します。これは、$ADM$£adm 、$DIP$£dip 、$MIL$£mil に変換されます。"
+ CONCENTRATE_DEVELOPMENT_TAKE:0 "開発度$DEV$は、$STATE|Y$から取得します。これは、$ADM$£adm£、$DIP$£dip£、$MIL$£mil£に変換されます。"
  CONCENTRATE_DEVELOPMENT_DISTRIBUTION:0 "消費後に、首都は $ADM$, $DIP$, $MIL$ の追加開発度を支払います。"
  CONCENTRATE_DEVELOPMENT_CONSEQUENCES:1 "これにより独立欲求$LIBERTYDESIRE$と外交評価$OPINION$が$COUNTRY|Y$に発生し、開発度を奪われた州に荒廃を与えます。"
  AGGRESSIVE_EXPANSION_REFORM_PREVENTS:0 "改革$REFORM$は可決している"
@@ -1253,7 +1253,7 @@
  FABRICATECLAIMDESC_ISCORE:0 "$PROVINCE|Y$は既に中核があります。"
  ALLOWATTACH:0 "§Y追随許可§!"
  UNIT_ATTACH_DESC:0 "§Yシフト§!を押している間、同じ州にいる利用可能なユニット全てと追随します。"
- UNIT_BURN_COLONY_DESC:0 "§Y$COST$§W£mil で植民地を焼き払います。"
+ UNIT_BURN_COLONY_DESC:0 "§Y$COST$§W£mil£で植民地を焼き払います。"
  BURN_COLONY:0 "§Y入植地の焼払§!"
  ANNEX_NATION_NO_PROGRESS:0 "併合の進捗を進められなくなりますが、将来状況が変わればまた再開させることができます。（$REASON$）"
  LOAN_REPAYMENT_GENERIC_TARGET:0 "債権者"
@@ -1609,6 +1609,6 @@
  MODIFIER_RELATION_WITH_ACCEPED_CULTURE:0 "受容文化の評価"
  MODIFIER_RELATION_WITH_OTHER_CULTURE:0 "非受容文化の評価"
  CONVERT_TRIBUTARY_TO_VASSAL_CANNOT_NOT_TRIBUTARY:0 "$COUNTRY$は我が国の朝貢国ではありません。"
- CENTRALIZE_STATE_NOPOWER:0 "ステートを集権化するために十分な統治力を持っていません。$POWER_COST|Y$£adm が必要なところ、現在$POWER_AVAILABLE|Y$£adm です。"
- EXPAND_INFRASTRUCTURE_NOPOWER:0 "インフラを拡張するために十分な統治力を持っていません。$POWER_COST|Y$£adm が必要なところ、現在$POWER_AVAILABLE|Y$£adm です。"
- EXPAND_INFRASTRUCTURE_COST_TOOLTIP:0 "州のインフラを$POWER_COST|Y$£admで拡張します。"
+ CENTRALIZE_STATE_NOPOWER:0 "ステートを集権化するために十分な統治力を持っていません。$POWER_COST|Y$£adm£が必要なところ、現在$POWER_AVAILABLE|Y$£adm£です。"
+ EXPAND_INFRASTRUCTURE_NOPOWER:0 "インフラを拡張するために十分な統治力を持っていません。$POWER_COST|Y$£adm£が必要なところ、現在$POWER_AVAILABLE|Y$£adm£です。"
+ EXPAND_INFRASTRUCTURE_COST_TOOLTIP:0 "州のインフラを$POWER_COST|Y$£adm£で拡張します。"
