--- a/source/localisation/common_sense_l_english.yml
+++ b/source/localisation/common_sense_l_english.yml
@@ -1027,7 +1027,7 @@
  SAME_DYNASTY_ALREADY:0 "$DYNASTY$はすでに$COUNTRY$を支配しています。"
  NEED_POSITIVE_PRESTIGE:0 "正の威信が必要です。"
  THEY_ARE_IN_DEBT:0 "それらは負債です。"
- NEED_POSITIVE_OPINION_OF_US:0 "我々への彼らの評価が正でなければなりません。"
+ NEED_POSITIVE_OPINION_OF_US:0 "彼らの我々への評価が正でなければなりません。"
  MUST_HAVE_LESS_LIBERTY_DESIRE:0 "独立要求が§Y$VAL$§!未満である必要があります。"
  MUST_HAVE_SAME_RELIGION_GROUP:0 "同じ宗教グループであることが必要です。"
  NEED_AT_LEAST:0 "少なくとも§Y$VAL$§!の$UNIT$ が必要です。"
