Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -3895,8 +3895,8 @@
  colonial_guyana:0 "ガイアナ植民地"
  short_colonial_australia:0 "オーストラリア"
  colonial_australia:0 "オーストラリア植民地"
- COLONIAL_REGION_New_Root_GetName:0 "ニュー[Root.GetName]"
- COLONIAL_REGION_New_Root_GetName_ADJ:0 "ニュー[Root.GetAdjective]"
+ COLONIAL_REGION_New_Root_GetName:0 "新[Root.GetName]"
+ COLONIAL_REGION_New_Root_GetName_ADJ:0 "新[Root.GetAdjective]"
  COLONIAL_ALASKA_Alyeska:1 "アリャースカ"
  COLONIAL_ALASKA_Alyeska_ADJ:1 "アリャースカ"
  COLONIAL_ALASKA_Pacifico_Norte:0 "パシフィコ・ノルテ"
