--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -112,7 +112,7 @@
  SET_GOVERNMENT_AND_RANK:0 "$WHO|Y$の政体が$GOV|Y$に変わります。政府ランクは$RANK|Y$です。\n"
  CREATE_REVOLT:0 "§R$SIZE$§W個連隊規模の反乱が§Y$WHERE$§Wで発生します。\n"
  CREATE_PIRATE:0 "§R$SIZE$§W隻の海賊が§Y$WHERE$§Wに姿を現しました。\n"
- NATIVE_FEROCITY:0 "$WHERE$の原住民の獰猛さが$VALUE$$DIRECTION$"
+ NATIVE_FEROCITY:0 "$WHERE$の原住民の獰猛性が$VALUE$$DIRECTION$"
  NATIVE_HOSTILENESS:0 "$WHERE$の原住民の攻撃性が$VALUE$$DIRECTION$"
  NATIVE_SIZE:0 "$WHERE$の原住民の規模が$VALUE$$DIRECTION$"
  CHANGE_BASE_TAX:0 "$WHERE$の基本税が$VALUE$$DIRECTION$\n"
