--- a/source/localisation/nw_l_english.yml
+++ b/source/localisation/nw_l_english.yml
@@ -201,7 +201,7 @@
  WE_ARE_AT_WAR:0 "戦争中である"
  cb_colonial_independance_war:0 "植民地独立"
  cb_colonial_independance_war_desc:0 "我々は独立すべきだ。"
- COLONIAL_NAME_FROM_OWNER_PROVINCE:0 "ニュー$NAME$"
+ COLONIAL_NAME_FROM_OWNER_PROVINCE:0 "新$NAME$"
  TRADE_WIND_TITLE:0 "§Y貿易風§!"
  TRADE_WIND_DESC:0 "隣接する海洋州への移動コストは、あなたが風に乗っているか、風に向かっているかによって、減少または増加します。これは、交易範囲と植民範囲の両方に影響します。"
  resource_depleted:0 "移民による資源枯渇"
