Save/Update files [ci skip]

--- a/source/localisation/emperor_missions_l_english.yml
+++ b/source/localisation/emperor_missions_l_english.yml
@@ -2284,8 +2284,8 @@
  hsa_subjugate_norway_mission_desc:0 "ノルウェー人は長い間、ハンザ同盟の影響を取り除くことを望んできた。我々は彼らのこの願いを叶えてやるべきではない。代わりに、我々は自分たちを彼らの主君とすべきだ！"
  hsa_queen_of_the_league_mission_title:0 "女王同盟"
  hsa_queen_of_the_league_mission_desc:0 "ハンザ同盟の女王であるリューベックの街は、我が国の真の心臓部である。我々はそれにその状態に値する素晴らしさを与えるため改造しなければならない。"
- hsa_return_visby_mission_title:0 "ヴィシュビューの同盟復帰"
- hsa_return_visby_mission_desc:0 "ゴットランドの主要都市であるヴィシュビューは、最近まで東バルト海におけるハンザ同盟の活動拠点であり、ノヴゴロド、リガ、リューベックの間の主要な中継地として機能していた。しかし、カルマル同盟の台頭により、我々は都市への影響力の低下を防ぐことができなかった。バルト海の支配を再び主張するには、島に対するデンマークとスウェーデンの主張に異議を申し立てる必要がある。"
+ hsa_return_visby_mission_title:0 "ヴィスビューの同盟復帰"
+ hsa_return_visby_mission_desc:0 "ゴットランドの主要都市であるヴィスビューは、最近まで東バルト海におけるハンザ同盟の活動拠点であり、ノヴゴロド、リガ、リューベックの間の主要な中継地として機能していた。しかし、カルマル同盟の台頭により、我々は都市への影響力の低下を防ぐことができなかった。バルト海の支配を再び主張するには、島に対するデンマークとスウェーデンの主張に異議を申し立てる必要がある。"
  hsa_return_novgorod_mission_title:0 "ノブゴロド・コントール"
  hsa_return_novgorod_mission_desc:0 "ノヴゴロド、ひいてはロシア内陸部との交易は、ハンザ都市の繁栄にとって不可欠だ。しかし、ノヴゴロドの商人と野心的なモスクワの皇帝は、都市の交易を支配し、競争相手を排除しようと努めている。我々は、都市の市場に対する我々の支配が挑戦を受けていないことを保証する必要がある。"
  hsa_dominate_commerce_mission_title:0 "貿易の独占"
