Save/Update files [ci skip]

--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -3419,7 +3419,7 @@
  flavor_mch.EVTOPTB1:0 "外交改革"
  flavor_mch.EVTOPTC1:0 "軍事改革"
  flavor_mch.EVTNAME2:0 "東部モンゴル族の吸収"
- flavor_mch.EVTDESC2:0 "いくつかの大きな東部モンゴル部族はヌルハチの元統合され、彼らの「旗」（軍団）の数字は四から八へと増えた。今や彼は目標を中華の征服へと定めた。1616年には「金汗」の称号を得たことを金・ツングース系の部族の者に見せた。彼は愛新覚羅（金の部族）としての名も取った。1625年、彼は中華を攻撃し、その発展は最終的に満州の完全勝利にて終わることとなる。"
+ flavor_mch.EVTDESC2:0 "いくつかの大きな東部モンゴル部族はヌルハチの元統合され、彼らの「旗」（軍団）の数字は四から八へと増えた。今や彼は目標を中華の征服へと定めた。1616年には「金汗」の称号を得たことを金・ツングース系の部族の者に見せた。彼は愛新覚羅（「金の部族」）としての名も取った。1625年、彼は中華を攻撃し、その発展は最終的に満州の完全勝利にて終わることとなる。"
  flavor_mch.EVTOPTA2:0 "我々は攻撃する準備ができています"
  flavor_mch.EVTNAME3:0 "満州軍の改革"
  flavor_mch.EVTDESC3:0 "今や満州は確然と中華の北を制御しており、満州国の軍事知識を奮い中国軍の改革に使うときかもしれない。しかしながら、費用は高くつくだろう上に、軍の多くはそんな試みに腹を立てるだろう。余はどうすべきだろうか？"
