--- a/source/localisation/modifers_l_english.yml
+++ b/source/localisation/modifers_l_english.yml
@@ -2241,7 +2241,7 @@
  adu_trade_hub:0 "関心ある港"
  desc_adu_trade_hub:0 "これはほとんど譲歩しない隣国から貴重な収入を引き出すための理想的な立地にある港だ。"
  adu_native_concord:0 "原住民との協調"
- desc_adu_native_concord:0 "最初にポルトガル人とカスティーリャ人の探検家が新世界へたどり着いた際の暴力的な振る舞いは、そこに住む土着民に気づかれていない。このことを異なる取り組みの機会ということが分かってきた―それは我々に、戦争や不和を扇動するよりもむしろ共に繁栄するのを見せるかもしれない。"
+ desc_adu_native_concord:0 "最初にポルトガル人とカスティーリャ人の探検家が新世界へたどり着いた際の暴力的な振る舞いは、そこに住む土着民に気づかれていない。このことを異なる取り組みの機会ということが分かってきた－それは我々に、戦争や不和を扇動するよりもむしろ共に繁栄するのを見せるかもしれない。"
  sicily_in_safe_hands:0 "行政投資"
  desc_sicily_in_safe_hands:0 "シチリア島は我が直接支配においてさらに役立っているーよって、島を繁栄させるためにより多くの資源を投資することができる。"
  adu_popular_appeal:0 "信者たちの流入"
