Save/Update files [ci skip]

--- a/source/localisation/prov_names_adj_l_english.yml
+++ b/source/localisation/prov_names_adj_l_english.yml
@@ -881,7 +881,7 @@
  PROV_ADJ891:0 "ニシャ"
  PROV_ADJ892:0 "ウィチタ"
  PROV_ADJ893:0 "チティマシャ"
- PROV_ADJ894:0 "カドー"
+ PROV_ADJ894:0 "カド"
  PROV_ADJ895:0 "アーカンソー"
  PROV_ADJ896:0 "イスカニ"
  PROV_ADJ897:0 "クオポー"
